fixed the table and aligned content

--- a/css/index.css
+++ b/css/index.css
@@ -165,6 +165,10 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+.students h2 {
+  margin-bottom: 20px;
+  margin-left: 10px;
+}
 body {
   width: 100%;
   margin: 0 auto;
@@ -270,8 +274,9 @@ footer {
 .home .students {
   margin-top: 40px;
 }
-.home .bottom-content-lambda {
+.home .bottom-content-lambda h2 {
   margin-top: 40px;
+  margin-left: 10px;
 }
 .home .main-image {
   display: flex;
@@ -299,9 +304,15 @@ footer {
     display: none;
   }
 }
+@media only screen and (max-width: 500px) {
+  .bottom-content-lambda {
+    display: flex;
+  }
+}
 .home .mid-content-header h2 {
   color: solid black;
   margin-top: 50px;
+  margin-left: 10px;
 }
 .home .mid-content {
   display: flex;
@@ -412,17 +423,19 @@ footer {
   border-radius: 10px;
 }
 .table {
-  width: 300px;
   margin-top: 20px;
   margin-bottom: 20px;
-  font-size: 1.5rem;
-  justify-content: center;
+  font-size: 2rem;
+  align-content: center;
 }
 table,
 td,
 th {
-  border: 1px solid black;
-  height: 40px;
+  border: 2px dotted black;
+  height: 10px;
+  margin: 0 2% 20px;
+  width: 700px;
+  text-align: center;
 }
 
 
