--- a/less/home-page.less
+++ b/less/home-page.less
@@ -30,6 +30,9 @@
 
   .bottom-content-lambda {
     margin-top: 40px;
+      @media @mobile {
+        width: 100%;
+    }
   }
 
   .main-image {
